# cartpole_nn

./: Makefile  README.md  pyproject.toml  requirements-ml-cpu.txt  requirements-ml-cu124.txt
notebooks/: investigate_data.ipynb  investigate_data2.ipynb
scripts/: append_traj.py  dump_quant.py  filter_trajectories.py  migrate_assess_trajectories.py  migrate_generate_trajectories.py  migrate_predict.py  migrate_train.py  migrate_trajectory_loader.py  migrate_trajectory_loader2.py  model_factory.py  model_utils.py  quant_model_factory.py  quant_summary.py  quant_utils.py  train_quant.py
scripts/train/trajectories_big_1_HD32_F32_B128_QBM_BML2_L4_BS16/: fp_proposal_150.json  trajectories_big_1_146.pth  trajectories_big_1_148.pth  trajectories_big_1_150.pth  trajectories_big_1_152.pth  trajectories_big_1_154.pth  trajectories_big_1_156.pth  trajectories_big_1_158.pth  trajectories_big_1_160.pth  trajectories_big_1_162.pth  trajectories_big_1_164.pth  trajectories_big_1_166.pth  trajectories_big_1_168.pth  trajectories_big_1_170.pth  trajectories_big_1_172.pth  trajectories_big_1_174.pth  trajectories_big_1_176.pth  trajectories_big_1_178.pth  trajectories_big_1_180.pth  trajectories_big_1_182.pth  trajectories_big_1_184.pth
scripts/train/trajectories_big_1_HD32_F32_B128_QBM_BML2_L4_BS8/: fp_proposal_152.json  trajectories_big_1_145.pth  trajectories_big_1_146.pth  trajectories_big_1_148.pth  trajectories_big_1_150.pth  trajectories_big_1_152.pth  trajectories_big_1_154.pth  trajectories_big_1_156.pth  trajectories_big_1_158.pth  (+13 more)
tests/: test_things.py
