[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cartpole_nn"
version = "0.1.0"
description = "Cartpole model/traning/quantization tools built on PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Stuart Johnson" }
]

# No dependencies here; you manage them via your venv.
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

